--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ seed = "0.8"
 lto = true
 opt-level = 's'
 codegen-units = 1
+incremental = true
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = ['-Os']
